crates/dag-macros/tests/ui/workflow_buffer_invalid_key.stderr
error: buffer! requires `max_items = <integer>`
  --> tests/ui/workflow_buffer_invalid_key.rs:41:30
   |
41 |     buffer!(trigger -> sink, items = 10);
   |                              ^^^^^
